--- a/vercel.json
+++ b/vercel.json
@@ -1,11 +1,14 @@
 {
   "buildCommand": "npm run build",
   "outputDirectory": "build",
-  "installCommand": "npm install",
+  "installCommand": "npm install --legacy-peer-deps",
   "framework": "create-react-app",
   "functions": {
     "app/api/**/*.js": {
       "runtime": "nodejs18.x"
     }
+  },
+  "env": {
+    "NODE_VERSION": "18.20.4"
   }
 }
